tempfile/async-recursion/tests/ui/args_repeated.stderr
error: received duplicate argument: `?Send`
 --> tests/ui/args_repeated.rs:3:1
  |
3 | #[async_recursion(?Send, ?Send)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `async_recursion` (in Nightly builds, run with -Z macro-backtrace for more info)

error: received too many arguments
 --> tests/ui/args_repeated.rs:6:1
  |
6 | #[async_recursion(?Send, Sync, ?Send)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `async_recursion` (in Nightly builds, run with -Z macro-backtrace for more info)

error: received too many arguments
 --> tests/ui/args_repeated.rs:9:1
  |
9 | #[async_recursion(Sync, ?Send, Sync, ?Send)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `async_recursion` (in Nightly builds, run with -Z macro-backtrace for more info)
